- [x] instead of hiding the modal at javascript start which might flicker,           change the CSS to avoid this. (modal shall be hidden at the start)     - [x] Preprocess data: first letter of first name and last name have to be uppercase     - [x] remove duplication of htmlEncode (use my.htmlEncode)     - Email-address is now a link

--- a/Source/css/main.css
+++ b/Source/css/main.css
@@ -142,16 +142,16 @@ body {
 }
 
 .modal-overlay {
-    display: block; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
 }
 
 .modal-content {
@@ -165,6 +165,8 @@ body {
     border-radius: var(--main-margin);
     background-color : var(--card-background-color);
 
+    /* A bit bigger margins for the sub-elements please... :) */
+    --main-margin: 12px;
 }
 
 .modal-content__closebutton {
@@ -208,7 +210,13 @@ body {
 
 .modal-content__divider {
     color: var(--card-secondary-font-color);
-    margin: var(--main-margin);
+    margin: calc( var(--main-margin) * 2 );
+}
+
+.modal-content__divider hr {
+    background-color: var(--card-secondary-font-color);
+    border: 0 none;
+    height: 1px;
 }
 
 .modal-content__phoneNr {
